--- a/client/src/Componentes/NavBar/NavBar.module.css
+++ b/client/src/Componentes/NavBar/NavBar.module.css
@@ -5,13 +5,23 @@
     border-radius: 15px;
     border: 3px solid black;
     align-items: center;
-    background-image: url('../../Imagenes/img2.jpg');
+    background-image: url('../../Imagenes/img1.jpg');
     background-size: cover;
-    background-position: center
+  }
+  .navContainer::before {
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    width: 120%;
+    height: 100%;
+    background-color: #dad4cc83;
+    z-index: 0;
+    border-bottom: 1px solid #776c62;
+    pointer-events: none;
   }
   .title {
     text-decoration:underline;
-    color: black;
+    color: rgb(11, 10, 10);
     margin: 0;
     font-size: 20px;
   }
