--- a/client/src/Componentes/Card/Cards.module.css
+++ b/client/src/Componentes/Card/Cards.module.css
@@ -9,7 +9,8 @@
     box-shadow: 0px 5px 20px 3px rgb(150, 184, 178);
     background-image: url('https://media.istockphoto.com/id/852004228/es/foto/mapa-topogr%C3%A1fico-de-render-3d-de-hait%C3%AD.jpg?s=612x612&w=0&k=20&c=QSA6lCZ_7XKkXgc8z35XK9RkCZe-FBnsepdn_o9E7dY=');
     background-size: cover;
-    background-position: center
+    background-attachment:fixed;
+    /* background-position: center */
   }
   
   .card:hover {
